режим завершения online/offline
