# api.yaml
@@ -50,6 +50,13 @@ paths:
           schema:
             type: string
             format: date-time
+        - name: mode
+          in: query
+          required: true
+          schema:
+            enum:
+              - online
+              - offline
       responses:
         '200':
           description: Ok
